# celery_chaos

./: .gitignore  README.md  docker-compose.yml  prometheus.yml  redis.Dockerfile
app/: Dockerfile  celery_app.py  pyproject.toml
app/tasks/: __init__.py  add_experiment_tasks_to_queue.py  cpu_intensive_task.py  hello_world.py  memory_intensive_task.py  request_task.py
chaos/: Dockerfile  main.py  pyproject.toml  router.py
chaos/scenarios/: tasks.py
