[tool.poetry]
name = "celery-chaos"
version = "0.1.0"
description = ""
authors = ["Pedro Queiroz <pccql@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
celery = "^5.4.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
